# aula20_bootcamp_python

./: docker-compose.yml  pyproject.toml
backend/: crud.py  database.py  models.py  requirements.txt  router.py  schemas.py
