[tool.poetry]
name = "aula20-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Rebeca <rebecavitoriarangel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.37"
pydantic = {extras = ["email"], version = "^2.10.6"}
fastapi = "^0.115.7"
crud = "^0.1"
uvicorn = "^0.34.0"
psycopg2 = "^2.9.10"
streamlit = "^1.41.1"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
